univention-management-console-frontend (3.0.130-1) unstable; urgency=low

  * Bug #30004: fixed scoping problem with addNotification in umc/widgets/Page
  * Bug #32218: changed order of buttons in logout dialogue

 -- Alexander Kläser <klaeser@univention.de>  Fri, 25 Oct 2013 13:20:41 +0200

univention-management-console-frontend (3.0.129-1) unstable; urgency=low

  * use new languages.json file for UMC i18n
  * remove old languages.json file when updating from a version below
    3.0.129-1
  (Bug #32678)

 -- Lukas Walter <walter@univention.de>  Thu, 24 Oct 2013 17:29:55 +0200

univention-management-console-frontend (3.0.128-1) unstable; urgency=low

  * Bug #26418: fix memory leaks in Grid
  * Bug #26418: only select one row

 -- Florian Best <best@univention.de>  Thu, 24 Oct 2013 13:57:01 +0200

univention-management-console-frontend (3.0.127-1) unstable; urgency=low

  * Bug #32218: adjusted buttons for Safari on iOS

 -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Oct 2013 12:55:15 +0200

univention-management-console-frontend (3.0.126-1) unstable; urgency=low

  * Bug #32218: background color to default button

 -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Oct 2013 12:40:43 +0200

univention-management-console-frontend (3.0.125-1) unstable; urgency=low

  * Bug #30004: make sure that initial notifications are shown with the red
    bubble, remove automatic closing when clicking on "i" button, convert menu
    icon for notifications to path

 -- Alexander Kläser <klaeser@univention.de>  Thu, 24 Oct 2013 12:25:33 +0200

univention-management-console-frontend (3.0.124-1) unstable; urgency=low

  * Bug #32930: Make attributes to be searched for in LiveSearchSidebar
    configurable

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 23 Oct 2013 22:15:27 +0200

univention-management-console-frontend (3.0.123-1) unstable; urgency=low

  * Bug #30004: removed comments, changed console.log() to console.warn(),