@@ -231,11 +231,9 @@
   margin-right: 0;
 }
 
-/* Buttons should have margins within LabelPanes, though */
-.umc .umcLabelPane {
-	.dijitButton:last-child {
+/* Buttons should have margins within LabelPanes, but not in the last LabelPane */
+.umc .umcLabelPane .dijitButton:last-child {
 		margin-right: 0.8em;
-	}
 }
 
 .umc .dijitDownArrowButton .dijitButtonText {
@@ -843,6 +841,10 @@
 			padding-right: 0;
 		}
 	}
+}
+
+.umc .umcMultiInput .umcMultiInputAddButton.dijitButton {
+	margin-right: 0;
 }
 
 .umcMultiSelect {
