@@ -1,7 +1,10 @@
 univention-management-console-frontend (3.0.130-1) unstable; urgency=low
 
   * Bug #30004: fixed scoping problem with addNotification in umc/widgets/Page
+  * Bug #30004: make sure that "your session has expired" is not shown when
+    initially loading UMC
   * Bug #32218: changed order of buttons in logout dialogue
+  * Bug #32218: remove margin-rigth from "add" button in MultiInput
 
  -- Alexander Kläser <klaeser@univention.de>  Fri, 25 Oct 2013 13:20:41 +0200
 
